# ragbase

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: reranking-and-filtering.ipynb
ragbase/: chain.py  config.py  ingestor.py  model.py  retriever.py  session_history.py  uploader.py
